--- a/posts/100-days-of-code/01-week-2/week-2.mdx
+++ b/posts/100-days-of-code/01-week-2/week-2.mdx
@@ -3,7 +3,9 @@ title: "#100DaysOfCode: Week 2"
 date: "01/16/2020"
 slug: 100-days-of-code/week-2
 author: Carlo Janea
-image: ../../../src/images/cover-photo.jpeg
+image: ./images/guilherme-stecanella.jpg
+coverSource: Guilherme Stecanella
+coverAlt: girl continuing her journey
 excerpt: What happened last last week
 ---
 
