--- a/posts/100-days-of-code/02-week-3/index.mdx
+++ b/posts/100-days-of-code/02-week-3/index.mdx
@@ -3,7 +3,9 @@ title: "#100DaysOfCode: Week 3"
 date: "01/23/2020"
 slug: 100-days-of-code/week-3
 author: Carlo Janea
-image: ../../../src/images/cover-photo.jpeg
+image: ./images/vonecia-carswell.jpg
+coverSource: Vonecia Carswell
+coverAlt: teamwork and empathy
 excerpt: What happened last last last week
 ---
 
