--- a/posts/100-days-of-code/03-week-4/index.mdx
+++ b/posts/100-days-of-code/03-week-4/index.mdx
@@ -3,7 +3,9 @@ title: "#100DaysOfCode: Week 4"
 date: "01/30/2020"
 slug: 100-days-of-code/week-4
 author: Carlo Janea
-image: ../../../src/images/cover-photo.jpeg
+image: ./images/andreas-kind.jpg
+coverSource: Andreas Kind
+coverAlt: eyes wide opened
 excerpt: What happened last last last week
 ---
 
