--- a/posts/100-days-of-code/04-week-5/index.mdx
+++ b/posts/100-days-of-code/04-week-5/index.mdx
@@ -3,7 +3,9 @@ title: "#100DaysOfCode: Week 5"
 date: "02/06/2020"
 slug: 100-days-of-code/week-5
 author: Carlo Janea
-image: ../../../src/images/cover-photo.jpeg
+image: ./images/nesa-by-makers.jpg
+coverSource: NESA by Makers
+coverAlt: team with patience and mentorship
 excerpt: What happened last last last week
 ---
 
@@ -51,6 +53,6 @@ Hoping you have a great week ahead.
 
 Thanks for sticking by! Say a prayer for Bailey, for me.
 
-### insert photo of bailey
+![my dog, bailey, looking cute](./images/bailey.jpeg)
 
 Thanks and See you!
