--- a/posts/100-days-of-code/05-week-6/index.mdx
+++ b/posts/100-days-of-code/05-week-6/index.mdx
@@ -3,7 +3,9 @@ title: "#100DaysOfCode: Week 6"
 date: "02/13/2020"
 slug: 100-days-of-code/week-6
 author: Carlo Janea
-image: ../../../src/images/cover-photo.jpeg
+image: ./images/jamie-davies.jpg
+coverSource: Jamie Davies
+coverAlt: mountain as challenges
 excerpt: What happened last last last week
 ---
 
