--- a/posts/dev-life/000-month-6-dev/month-6.mdx
+++ b/posts/dev-life/000-month-6-dev/month-6.mdx
@@ -1,8 +1,11 @@
 ---
 title: "TIL: 6 months as a dev"
+date: "08/07/2019"
 slug: dev-life/6-months-dev
 author: Carlo Janea
-image: ../../../src/images/cover-photo.jpeg
+image: ./images/studio-republic.jpg
+coverSource: Studio Republic
+coverAlt: guy focused on work
 excerpt: 6 monthsss
 ---
 
