--- a/posts/dev-life/001-month-12-dev/month-12-dev.mdx
+++ b/posts/dev-life/001-month-12-dev/month-12-dev.mdx
@@ -1,12 +1,13 @@
 ---
 title: "TIL: 12 months as a dev"
+date: "12/17/2019"
 slug: dev-life/12-months-dev
 author: Carlo Janea
-image: ../../../src/images/cover-photo.jpeg
+image: ./images/razvan-chisu.jpg
+coverSource: Razvan Chisu
+coverAlt: guy feeling accomplished
 excerpt: 12 monthsss
 ---
-
-### Date: December 17, 2019
 
 And we're back! I posted a **TIL: 6 MONTHS AS A DEV** blog regarding, wait for it, my dev experience in 6 months! (obvi ). You can check it out later and see the growing realizations and differences of such experiences.
 
