--- a/posts/dev-life/002-rags-to-cleaner-rags/from-rags-to-cleaner-rags.mdx
+++ b/posts/dev-life/002-rags-to-cleaner-rags/from-rags-to-cleaner-rags.mdx
@@ -1,12 +1,13 @@
 ---
 title: "Being a dev - from rags to cleaner rags."
+date: "12/25/2019"
 slug: dev-life/rags-to-cleaner-rags
 author: Carlo Janea
-image: ../../../src/images/cover-photo.jpeg
+image: ./images/angela-benito.jpg
+coverSource: Angela Benito
+coverAlt: trees that symbolize growth
 excerpt: something
 ---
-
-### Date: December 25, 2019
 
 I was born out of poverty - family of seven, both parents didn't have work,  and no real family income to assist any family needs. The only person that kept us afloat was my grandmother, then eventually our eldest sister, which by the way should not have been her burden (but that topic is a whole another post )
 
