--- a/posts/randos/000-going-stingy/index.mdx
+++ b/posts/randos/000-going-stingy/index.mdx
@@ -1,12 +1,13 @@
 ---
 title: "Going stingy, get fazed."
+date: "01/31/2020"
 slug: randos/going-stingy-get-fazed
 author: Carlo Janea
-image: ../../../src/images/cover-photo.jpeg
+image: ./images/michael-longmire.jpg
+coverSource: Michael Longmire
+coverAlt: coins that symbolize being thrifty
 excerpt: stingy experience
 ---
-
-### Date: January 31, 2020
 
 Alright, the title might be too aggressive but hear me out.
 
