--- a/posts/reviews/000-1917-review/index.mdx
+++ b/posts/reviews/000-1917-review/index.mdx
@@ -1,12 +1,13 @@
 ---
 title: "1917: a cinematic enthralment"
+date: "02/08/2020"
 slug: reviews/1917
 author: Carlo Janea
-image: ../../../src/images/cover-photo.jpeg
+image: ./images/carlo-janea.jpeg
+coverSource: Michael Longmire
+coverAlt: 1917 movie poster
 excerpt: my review on 1917
 ---
-
-### Date: February 8, 2020
 
 Today I saw the film 1917 directed by Sam Mendes at my local cinema's VIP seats (with the best sound, and better screen color rendering)
 
