finished post preview

--- a/posts/100-days-of-code/01-week-2/week-2.mdx
+++ b/posts/100-days-of-code/01-week-2/week-2.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/guilherme-stecanella.jpg
 coverSource: Guilherme Stecanella
 coverAlt: girl continuing her journey
-excerpt: What happened last last week
+excerpt: questions, anxiety, and answers
 ---
 
 It's week two! Two! That's like a sequel to a week, another chapter to a book, a new week to a month, and well because it definitely was!
