--- a/posts/100-days-of-code/02-week-3/index.mdx
+++ b/posts/100-days-of-code/02-week-3/index.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/vonecia-carswell.jpg
 coverSource: Vonecia Carswell
 coverAlt: teamwork and empathy
-excerpt: What happened last last last week
+excerpt: empathy amongst everything
 ---
 
 It's a trilogy! Well if this was a movie then it would have been a trilogy, but this is more than a movie! These are my experiences and we need like infinite amounts of trilogies!
