--- a/posts/100-days-of-code/03-week-4/index.mdx
+++ b/posts/100-days-of-code/03-week-4/index.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/andreas-kind.jpg
 coverSource: Andreas Kind
 coverAlt: eyes wide opened
-excerpt: What happened last last last week
+excerpt: a vivid awakening
 ---
 
 Four! Wow! A month??  That's a month-worth of work!
