--- a/posts/100-days-of-code/04-week-5/index.mdx
+++ b/posts/100-days-of-code/04-week-5/index.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/nesa-by-makers.jpg
 coverSource: NESA by Makers
 coverAlt: team with patience and mentorship
-excerpt: What happened last last last week
+excerpt: how an environment enables growth
 ---
 
 It's week 5! That's the number of fingers I have in one hand!
