--- a/posts/100-days-of-code/05-week-6/index.mdx
+++ b/posts/100-days-of-code/05-week-6/index.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/jamie-davies.jpg
 coverSource: Jamie Davies
 coverAlt: mountain as challenges
-excerpt: What happened last last last week
+excerpt: challenges against will and teamwork
 ---
 
 Six??? Crazy to think how we're halfway there already! (If my math serves me right: 100 days = ~12 work weeks)
