--- a/posts/dev-life/000-month-6-dev/month-6.mdx
+++ b/posts/dev-life/000-month-6-dev/month-6.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/studio-republic.jpg
 coverSource: Studio Republic
 coverAlt: guy focused on work
-excerpt: 6 monthsss
+excerpt: a realization made out of fresh experiences
 ---
 
 ### Date: August 7, 2019
