--- a/posts/dev-life/001-month-12-dev/month-12-dev.mdx
+++ b/posts/dev-life/001-month-12-dev/month-12-dev.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/razvan-chisu.jpg
 coverSource: Razvan Chisu
 coverAlt: guy feeling accomplished
-excerpt: 12 monthsss
+excerpt: growth and turning points
 ---
 
 And we're back! I posted a **TIL: 6 MONTHS AS A DEV** blog regarding, wait for it, my dev experience in 6 months! (obvi ). You can check it out later and see the growing realizations and differences of such experiences.
