--- a/posts/dev-life/002-rags-to-cleaner-rags/from-rags-to-cleaner-rags.mdx
+++ b/posts/dev-life/002-rags-to-cleaner-rags/from-rags-to-cleaner-rags.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/angela-benito.jpg
 coverSource: Angela Benito
 coverAlt: trees that symbolize growth
-excerpt: something
+excerpt: to the kid who was ever unsure
 ---
 
 I was born out of poverty - family of seven, both parents didn't have work,  and no real family income to assist any family needs. The only person that kept us afloat was my grandmother, then eventually our eldest sister, which by the way should not have been her burden (but that topic is a whole another post )
