--- a/posts/randos/000-going-stingy/index.mdx
+++ b/posts/randos/000-going-stingy/index.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/michael-longmire.jpg
 coverSource: Michael Longmire
 coverAlt: coins that symbolize being thrifty
-excerpt: stingy experience
+excerpt: how a stingy experience changed my attitude
 ---
 
 Alright, the title might be too aggressive but hear me out.
