--- a/posts/reviews/000-1917-review/index.mdx
+++ b/posts/reviews/000-1917-review/index.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/carlo-janea.jpeg
 coverSource: Michael Longmire
 coverAlt: 1917 movie poster
-excerpt: my review on 1917
+excerpt: an honest review by an avid fan of cinema
 ---
 
 Today I saw the film 1917 directed by Sam Mendes at my local cinema's VIP seats (with the best sound, and better screen color rendering)
