--- a/posts/100-days-of-code/00-week-1/week-1.mdx
+++ b/posts/100-days-of-code/00-week-1/week-1.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/danielle-macinnes.jpg
 coverSource: Danielle MacInnes
 coverAlt: cup of coffee in the morning
-excerpt: What happened last week
+excerpt: the beginning of a journey
 ---
 
 I might be using the hashtag incorrectly but this is my journey as a junior developer at my second company. I considered using the #100DaysOfCode hashtag because there was really no proper junior experience from my first dev job. No proper mentorship, improperly handled project management, burnout and the list goes on.
