added template, pages, and framer

--- a/posts/dev-life/000-month-6-dev/month-6.mdx
+++ b/posts/dev-life/000-month-6-dev/month-6.mdx
@@ -15,7 +15,7 @@ I graduated my Bachelor's Degree last December 2018 and got hired around the las
 
 Time travel to now, August 2019, and have learned a lot of things not just technically but a whole lot of thingies! Also, imma go about this randomly as it comes to my head so if the "categories" of the things i write about goes crazy, it's just all the random important things I learned within the first 6 months as a dev.
 
-1. More rendered work hours DOES NOT measure productivity.
+1. **More rendered work hours DOES NOT measure productivity.**
 
    I strongly put my foot on this one as I have met people who brag about their rendered "over time" work and feel so good about themselves, like? It's just not how it is.
 
@@ -25,7 +25,7 @@ Time travel to now, August 2019, and have learned a lot of things not just techn
 
    So give yourself a break, and don't overthink it too much.
 
-2. Meetings are important! (for the right reasons, and if done right!)
+2. **Meetings are important! (for the right reasons, and if done right!)**
 
    So what do you do to avoid having to render more work hours while having to successfully (?) achieve the goals of your sprints?
 
@@ -35,7 +35,7 @@ Time travel to now, August 2019, and have learned a lot of things not just techn
 
    Also, talk about the specifications and your geared solution/implementation towards the problem at hand so that when you go to "development mode / coding", you only have to think about translating the DISCUSSED and THOUGHT ABOUT solution and not think about other things on the fly. As per my experience, this is the primary cause of slow development. (and a lot of refactors too)
 
-3. Appreciate a good mentor.
+3. **Appreciate a good mentor.**
 
    Being new in the dev world, you get little chances of having a good mentor. One that is very open to help (don't abuse it!), one that gives feedback to your work in a professional manner that doesn't implicate any sense of you being a bad dev, a mentor that appreciates your work and corrects it if need be, and a mentor that is open to change, or to be thought of things too. (because learning doesn't stop!) Also, if you are really lucky, a mentor that gives you the opportunity of growth and freedom while still having that overlooking guidance in case you need it. Now that's a gem! That'll take you to the next level!
 
@@ -43,7 +43,7 @@ Time travel to now, August 2019, and have learned a lot of things not just techn
 
    And if those people you do not admire make unsolicited comments about your work or even about you, then brush it off. Don't take the time to think about things from people who don't matter to your growth. (but still observe them though, helped me a lot!)
 
-4. Love yourself more!
+4. **Love yourself more!**
 
    Always prioritize yourself. Above everything. Let them call you selfish if you take the time to destress and recompose. Let them call you things and just breathe. Because in the end, you are all you have. And without you, the work, the money, the people and the other things, they're gone too.
 
@@ -51,15 +51,15 @@ Time travel to now, August 2019, and have learned a lot of things not just techn
 
    But don't get me wrong though, being solely selfish is different than prioritizing yourself over your work, or anything really. Because the key word is prioritize. You have to know the balance and where to allocate your efforts into. Self love doesnt mean you forget about your work. Or you forget about other people. It's just having to love ourself first,  before serving and doing your work. It's a fine line. But when you see it. Never take your eyes off it!
 
-5. Appreciate the people!
+5. **Appreciate the people!**
 
    The work is good, but the people is what makes it amazing. Take the time to realize and appreciate the people around you who makes every little time worth while. The people who supports you, who shows you how to have a good time, the people who recognizes you when you are unrecognizable, and the people who makes you grow and be better. The people!\
 
-6. Write about it!
+6. **Write about it!**
 
    Writing makes me remember things, a lot! And if I forget about how to do a certain stuff, I can just read about it with my own words and my own learning style. It also makes you see your implementation or your thoughts in a bigger picture, and you often see lapses and problems while doing so. So it's definitely a SUPER win!
 
-7. a lot more!
+7. **a lot more!**
 
    I'll write more when I remember and realize things. So this might soon not end at number 7! Stay tuned!
 
