--- a/posts/reviews/000-1917-review/index.mdx
+++ b/posts/reviews/000-1917-review/index.mdx
@@ -4,7 +4,7 @@ date: "02/08/2020"
 slug: reviews/1917
 author: Carlo Janea
 image: ./images/carlo-janea.jpeg
-coverSource: Michael Longmire
+coverSource: Carlo Janea
 coverAlt: 1917 movie poster
 excerpt: an honest review by an avid fan of cinema
 ---
@@ -13,7 +13,7 @@ Today I saw the film 1917 directed by Sam Mendes at my local cinema's VIP seats 
 
 And I'm telling you, it was worth every penny, and I would pay to see it again, given that the joy of seeing it the first time would be there.
 
-# insert image here
+![my awestruck reaction to 1917](./images/reaction.jpeg)
 
 The cinematography. Damn. Where do I begin? It encapsulates the journey, it enthrals you to be with the lead actors, and it brings the story together -- with us along it. The camera work and editing is not just some behind the scenes magic, it is the magic. It humanizes the barrier between screen and person, and what's left is this captivating piece of art that makes you feel all the emotions embedded within it unfolding piece by piece in real time, or at least on how we perceive it.
 
