--- a/posts/dev-life/001-month-12-dev/month-12-dev.mdx
+++ b/posts/dev-life/001-month-12-dev/month-12-dev.mdx
@@ -13,17 +13,17 @@ And we're back! I posted a **TIL: 6 MONTHS AS A DEV** blog regarding, wait for i
 
 Let's begin!
 
-1. More rendered work hours DOES NOT measure productivity and passion for the work.
+1. **More rendered work hours DOES NOT measure productivity and passion for the work.**
 
    Emphasis on passion. I've written on this before but there has been a much more vivid feelings regarding this topic. Clarity has been served. Having to work for almost a year as a new dev in outsourcing, you are exposed to the idea that you're client's needs are paramount to your success. Wrong people will encourage you to work extra hours, unpaid, because this indicates that you are passionate in helping your client's product grow beyond money, and not doing so will just paint the other picture.But this is wrong! It's just wrong. Not only does this encourage burnout, but (like my points in the previous post) this will inevitably slow down production in both quantity and quality of work! This endangers your body's natural cycle of proper productivity. What you can do better on, to help your client, is to **prioritize and juggle your work properly.** Studies and millions of other devs will back me up on this. This will keep you fulfilled with you work, have time for yourself, and have space for growth and assessment.Work is important, but it is not everything. It doesn't mean you're not passionate about it. You just are passionate about a lot of things, and you have to make sure that you don't use up all your batteries on one thing because in the end, you'll end up with nothing to give.
 
    so don't forget to recharge! (and always prioritize!)
 
-2. Don't be too hard on yourself!
+2. **Don't be too hard on yourself!**
 
    Having to graduate school as an achiever, you expect so much from yourself right off the bat directly at work. Being an achiever isn't bad, but when you have unrealistic expectations set up for yourself and your work, you can get very toxic towards yourself, and sometimes to others.But as I've learned, one must be accustomed to the feeling of failure so much so that the word failure wouldn't have to hurt when you feel it. In the year that I've worked as a dev, I've realized the importance of continuously failing and having the proper environment to understand such failure. Be wary, though. Being accustomed and comfortable with failure doesn't have to compromise our goals for success. Failing often, yes, but always with the goal of growth and improvement.So if you're an achiever like me, remember that you only fail when you stop trying. So if you're still trying and growing, you're doing really good!
 
-3. Earning money
+3. **Earning money**
 
    When you've worked for almost a year, you may or may not have saved some amount of money, but if you did, then you would know that watching your bank account grow is very addicting.
 
@@ -33,7 +33,7 @@ Let's begin!
 
    I've learned this the hard way. Paid some money and learned it the hard way. I've grown from it so I hope you do, too!
 
-4. Empathy and respect
+4. **Empathy and respect**
 
    Sure being talented and quick to solve certain things are important, but is it necessary that we forget about respect and empathy towards the people beyond the work?
 
@@ -43,7 +43,7 @@ Let's begin!
 
    So be human!
 
-5. Growth
+5. **Growth**
 
    I cannot stress the importance of growth over money, especially to entry-level or junior devs like me. No amount of money will pay for the experience and learning you will gain from a great mentor.So choose a good mentor! (like the point from my last post) Never stop growing, in any aspect of your life whether its work or personal.Because the money will come after. (It did!)
 
