added proper nav

--- a/posts/dev-life/001-month-12-dev/month-12-dev.mdx
+++ b/posts/dev-life/001-month-12-dev/month-12-dev.mdx
@@ -9,7 +9,7 @@ coverAlt: guy feeling accomplished
 excerpt: growth and turning points
 ---
 
-And we're back! I posted a **TIL: 6 MONTHS AS A DEV** blog regarding, wait for it, my dev experience in 6 months! (obvi ). You can check it out later and see the growing realizations and differences of such experiences.
+And we're back! I posted a [TIL: 6 MONTHS AS A DEV](/dev-life/6-months-dev) blog regarding, wait for it, my dev experience in 6 months! (obvi ). You can check it out later and see the growing realizations and differences of such experiences.
 
 Let's begin!
 
