added footer data

--- a/posts/100-days-of-code/00-week-1/week-1.mdx
+++ b/posts/100-days-of-code/00-week-1/week-1.mdx
@@ -1,6 +1,6 @@
 ---
 title: "#100DaysOfCode: Week 1"
-date: "01/09/2020"
+date: 2020-01-09
 slug: 100-days-of-code/week-1
 author: Carlo Janea
 image: ./images/danielle-macinnes.jpg
