--- a/posts/100-days-of-code/01-week-2/week-2.mdx
+++ b/posts/100-days-of-code/01-week-2/week-2.mdx
@@ -1,6 +1,6 @@
 ---
 title: "#100DaysOfCode: Week 2"
-date: "01/16/2020"
+date: 2020-01-16
 slug: 100-days-of-code/week-2
 author: Carlo Janea
 image: ./images/guilherme-stecanella.jpg
