--- a/posts/100-days-of-code/02-week-3/index.mdx
+++ b/posts/100-days-of-code/02-week-3/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "#100DaysOfCode: Week 3"
-date: "01/23/2020"
+date: 2020-01-23
 slug: 100-days-of-code/week-3
 author: Carlo Janea
 image: ./images/vonecia-carswell.jpg
