--- a/posts/100-days-of-code/03-week-4/index.mdx
+++ b/posts/100-days-of-code/03-week-4/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "#100DaysOfCode: Week 4"
-date: "01/30/2020"
+date: 2020-01-30
 slug: 100-days-of-code/week-4
 author: Carlo Janea
 image: ./images/andreas-kind.jpg
