--- a/posts/100-days-of-code/04-week-5/index.mdx
+++ b/posts/100-days-of-code/04-week-5/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "#100DaysOfCode: Week 5"
-date: "02/06/2020"
+date: 2020-02-06
 slug: 100-days-of-code/week-5
 author: Carlo Janea
 image: ./images/nesa-by-makers.jpg
