--- a/posts/100-days-of-code/06-week-7/index.mdx
+++ b/posts/100-days-of-code/06-week-7/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "#100DaysOfCode: Week 7"
-date: "02/20/2020"
+date: 2020-02-20
 slug: 100-days-of-code/week-7
 author: Carlo Janea
 image: ./images/annie-spratt.jpg
