--- a/posts/dev-life/001-month-12-dev/month-12-dev.mdx
+++ b/posts/dev-life/001-month-12-dev/month-12-dev.mdx
@@ -1,6 +1,6 @@
 ---
 title: "TIL: 12 months as a dev"
-date: "12/17/2019"
+date: 2019-12-17
 slug: dev-life/12-months-dev
 author: Carlo Janea
 image: ./images/razvan-chisu.jpg
