--- a/posts/dev-life/002-rags-to-cleaner-rags/from-rags-to-cleaner-rags.mdx
+++ b/posts/dev-life/002-rags-to-cleaner-rags/from-rags-to-cleaner-rags.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Being a dev - from rags to cleaner rags."
-date: "12/25/2019"
+date: 2019-12-25
 slug: dev-life/rags-to-cleaner-rags
 author: Carlo Janea
 image: ./images/angela-benito.jpg
