--- a/posts/reviews/000-1917-review/index.mdx
+++ b/posts/reviews/000-1917-review/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "1917: a cinematic enthralment"
-date: "02/08/2020"
+date: 2020-02-08
 slug: reviews/1917
 author: Carlo Janea
 image: ./images/carlo-janea.jpeg
