--- a/posts/100-days-of-code/05-week-6/index.mdx
+++ b/posts/100-days-of-code/05-week-6/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "#100DaysOfCode: Week 6"
-date: "02/13/2020"
+date: 2020-02-13
 slug: 100-days-of-code/week-6
 author: Carlo Janea
 image: ./images/jamie-davies.jpg
