--- a/posts/dev-life/000-month-6-dev/month-6.mdx
+++ b/posts/dev-life/000-month-6-dev/month-6.mdx
@@ -1,6 +1,6 @@
 ---
 title: "TIL: 6 months as a dev"
-date: "08/07/2019"
+date: 2019-08-07
 slug: dev-life/6-months-dev
 author: Carlo Janea
 image: ./images/studio-republic.jpg
