--- a/posts/randos/000-going-stingy/index.mdx
+++ b/posts/randos/000-going-stingy/index.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Going stingy, get fazed."
-date: "01/31/2020"
+date: 2020-01-31
 slug: randos/going-stingy-get-fazed
 author: Carlo Janea
 image: ./images/michael-longmire.jpg
