--- a/posts/100-days-of-code/06-week-7/index.mdx
+++ b/posts/100-days-of-code/06-week-7/index.mdx
@@ -31,13 +31,13 @@ First, was our team lead reassuring me every step of the way that I should never
 
 And I've never felt more assured and safe in a working environment. And guess what, I finished it hours later! This was possibly attributed to the weight of thinking I'm a burden and a slow dev taken out of my shoulder LOL. (haha yeah _I gotta be more patient and understanding with myself_)
 
-Also, I don't take this patience for granted. I know they understand I'm a junior developer so they want to provide a safe space for growth, but I'm not making this as an excuse to slack off and stuff. I use the time to carefully review my own work, think of other composable solutions, run through my ideas to the team (or just the lead), and assess if such solutions are maintainable.
+Also, I don't take this patience for granted. I know they understand I'm a junior developer so they want to provide a safe space for growth, but I'm not making this as an excuse to slack off. I use the time to carefully review my own work, think of other composable solutions, run through my ideas to the team (or just the lead), and assess if such solutions are maintainable.
 
 And if not for the healthy environment I am currently in, I wouldn't be able to do such things and improve my output.
 
 Okayyy enough with work. Another thing that has happened that reallyyy stopped me in my tracks was during lunch break when I was talking with our financial manager.
 
-We were talking about each other's travels and experiences and the tips and such for each destination. What shocked me greatly was when she referred to me as a member of the LGTBQ+ community in the most non-discriminating way possible. She used my pronouns right, she addressed me in such a way that sexual orientation wouldn't change a thing, and we clicked on our ideas in the most safe and comfortable space possible.
+We were talking about each other's travels and experiences and the tips and such for each destination. What shocked me greatly was when she referred to me as a member of the LGTBQ+ community in the most non-discriminating way possible. She used my pronouns right, she addressed me in such a way that sexual orientation wouldn't had changed a thing, and we clicked on our ideas in the most safe and comfortable space possible.
 
 And this is true to all the people in the company (~14 people), never was I questioned about my sexual orientation from day 1 and even until now, because why should they? An environment where it shouldn't matter and _should just be normal_ is why I'm very happy I belong here.
 
