--- a/posts/100-days-of-code/09-week-10/index.mdx
+++ b/posts/100-days-of-code/09-week-10/index.mdx
@@ -13,7 +13,7 @@ We're on our two-digit week! That's crazy!
 
 What's even crazier? The _huuuge_ gap between my current perspective on things versus last week's.
 
-The last two weeks were heavy. From a spectator's perspective (and from the future looking back), those two weeks were testament to how much I want to keep doing what I'm doing – especially in the community/atmosphere that I am in.
+The [last two weeks](https://blog.carlojanea.com/100-days-of-code/week-8) were heavy. From a spectator's perspective (and from the future looking back), those two weeks were testament to how much I want to keep doing what I'm doing – especially in the community/atmosphere that I am in.
 
 _We_ felt trapped, and unsure in varying forms but we persisted, and within those experiences, we were learning. Learning to communicate and even _overcommunicate_. To find a process that's healthy and realistic. To ask for help and _just listen_.
 **To always listen**.
@@ -23,7 +23,7 @@ eye-opening.
 
 The last two weeks were grueling because I approached a problem incorrectly, in the most unhealthy way possible. This left us to starting this week with a finished task and a new sprint (project cycle).
 
-This means meetings, internal discussions, and patches. What part was eye opening? Two things.
+This means meetings, internal discussions, and patches. What part was eye opening? Three things.
 
 - Appreciating the non-coding part of work
 - Recognizing healthy patterns in solving issues
