minor content fixes

--- a/posts/tech/001-cloudinary-react/index.mdx
+++ b/posts/tech/001-cloudinary-react/index.mdx
@@ -200,4 +200,4 @@ This isn't possible because CloudinaryContext here is just a wrapper, not fully 
 
 Anyway! That's it! Hope this post helped you!
 
-Let me know on [twitter](https://twitter.com/carlojanea) if you have questions or corrections. Would totally appreciate it!
+Let me know on [twitter](https://twitter.com/carlojanea) if you have questions or corrections. Would totally appreciate it! 🙏🏼
