added canvas with react post

--- a/posts/tech/001-cloudinary-react/index.mdx
+++ b/posts/tech/001-cloudinary-react/index.mdx
@@ -5,7 +5,7 @@ slug: tech/cloudinary-with-react
 author: Carlo Janea
 image: ./images/nicholas-swanson.jpg
 coverSource: Nicholas Swanson
-coverAlt: no image
+coverAlt: a group of people standing on a mountain covered in clouds
 excerpt: creating a custom upload hook
 ---
 
