link fixes on canvas post

--- a/posts/tech/002-canvas-with-react/index.mdx
+++ b/posts/tech/002-canvas-with-react/index.mdx
@@ -119,7 +119,7 @@ const resizeCanvas = useCallback(() => {
 
 And that's it! Fully responsive canvas element.
 
-Tip: Make sure to debounce the `resizeCanvas` method by either using lodash/underscore's [debounce](https://underscorejs.org/) or implementing your [own!](https://usehooks.com/useDebounce/)
+Tip: Make sure to debounce the `resizeCanvas` method by either using lodash/underscore's [debounce](https://underscorejs.org/) or implementing your [own!](https://dev.to/gabe_ragland/debouncing-with-react-hooks-jci)
 
 Otherwise it'll re-render and re-draw your canvas a lot and look glitchy.
 
