added routes-and-props post

--- a/posts/tech/002-canvas-with-react/index.mdx
+++ b/posts/tech/002-canvas-with-react/index.mdx
@@ -6,7 +6,7 @@ author: Carlo Janea
 image: ./images/steve-johnson.jpg
 coverSource: Steve Johnson
 coverAlt: a wall of painted with many colors
-excerpt: how to create a full width full height canvas element in react
+excerpt: creating a full width full height canvas element in react
 ---
 
 So I was deciding on having an animated background on the landing page of some side project and decided to use canvas, instead of SVG since it's a lot more performant and less CPU process intensive (in terms of animating the number of objects in the screen).
