added clarification for iframe permisiion

--- a/posts/tech/005-iframes-and-permissions/index.mdx
+++ b/posts/tech/005-iframes-and-permissions/index.mdx
@@ -75,6 +75,7 @@ In cases where you can adjust your code to change where you request for access o
 But in cases where **iframe C** (the child) has to be the one to ask for permissions, you only need to change the value within `allow`.
 
 ```
+// for iframe P (parent)
 // change this statement
 allow="camera; microphone; display-capture"
 
