typo fixes: in hindsight

--- a/posts/randos/002-in-hindsight/index.mdx
+++ b/posts/randos/002-in-hindsight/index.mdx
@@ -9,7 +9,7 @@ coverAlt: girl looking back over an icey waterfall
 excerpt: looking back at how I behaved in college
 ---
 
-3 years after I’ve finished college, almost a year of living alone, sitting with my thoughts, and contemplating past behaviors, today I decided to deconstruct why I behaved a certain way through the college phase of my life.
+Almost two years after I’ve finished college, almost a year of living alone, sitting with my thoughts, and contemplating past behaviors, today I decided to deconstruct why I behaved a certain way through the college phase of my life.
 
 I’d like to believe I did a lot of good things through college, but I’m very much aware of the fact that the me in college, is far from who I am now.
 
@@ -17,7 +17,7 @@ I used to think that my personality in college was who I am at that time, and th
 
 Insecurity fueled how I behaved and wanted to be perceived by other people, and survival pumped the gas and drove it. I was poor, lonely, undriven, and mediocre. I had to be ashamed of all of these, and hid them the best way I could – _pretend to be something I’m not._
 
-I preferred hanging out with the _rich_ kids, or the people topping the class. I acted the way I did so that I could seem acceptable to their standards. I wanted to stand out and be recognized so that at least in school, it wouldn’t feel so lonely and unfulfilling.
+I preferred hanging out with the _socially elite_, or the people topping the class. I acted the way I did so that I could seem acceptable to their standards. I wanted to stand out and be recognized so that at least in school, it wouldn’t feel so lonely and unfulfilling.
 
 This lead me to joining orgs I didn’t even believe in, doing activities to be seen in public, even if I had no business playing the part, and being overly competitive even to my own circle.
 
