added cloudinary social cards

--- a/posts/randos/002-in-hindsight/index.mdx
+++ b/posts/randos/002-in-hindsight/index.mdx
@@ -7,6 +7,8 @@ image: ./images/willian-justen-de-vasconcellos.jpg
 coverSource: Willian Justen De Vasconcellos
 coverAlt: girl looking back over an icey waterfall
 excerpt: looking back at how I behaved in college
+titleBottomOffset: 325
+taglineTopOffset: 350
 ---
 
 Almost two years after I’ve finished college, almost a year of living alone, sitting with my thoughts, and contemplating past behaviors, today I decided to deconstruct why I behaved a certain way through the college phase of my life.
