fix routes seo card

--- a/posts/tech/003-routes-and-props/index.mdx
+++ b/posts/tech/003-routes-and-props/index.mdx
@@ -7,6 +7,8 @@ image: ./images/javier-allegue.jpg
 coverSource: Javier Allegue
 coverAlt: a route helper silhouette over a pink sky
 excerpt: how routes unmount in webview with incorrect prop usage
+titleBottomOffset: 250
+taglineTopOffset: 400
 ---
 
 So I was tasked to investigate this issue where a component displayed using [webview](https://github.com/react-native-community/react-native-webview) would unmount every time we interact with the file/camera dialog.
